--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="./style.css" rel="stylesheet">
+    <title>Persona 3 Reload</title>
+</head>
+<body>
+    
+</body>
+</html>
