--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
+    <img src='https://drive.google.com/file/d/1cjCXX-Nunq2VbuW114OVJNxaSsHz7V5M/view' alt="Max" width="3456" height="4608">
     <h1>Persona 3</h1>
 </body>
 </html>
