--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <img src='./mylivewallpapers-com-Train-Ride-Persona-3-Reload-4K.mp4' alt="Makoto" width="3840" height="2160">
+    <video width="320" height="240" controls>
+      <source src="./Makoto-train" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <h1>Persona 3</h1>
 </body>
 </html>
