--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <video width="3840" height="2160" controls>
-      <source src="https://github.com/Fell0wer/Persona/raw/main/mylivewallpapers-com-Train-Ride-Persona-3-Reload-4K.mp4">
+    <video width="1920" height="1080" controls>
+      <source src="https://github.com/Fell0wer/Persona/raw/main/mylivewallpapers-com-Train-Ride-Persona-3-Reload-4K.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <h1>Persona 3</h1>
