--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <video width="1920" height="1080" controls>
       <source src="https://github.com/Fell0wer/Persona/raw/main/mylivewallpapers-com-Train-Ride-Persona-3-Reload-4K.mp4" type="video/mp4">
         Your browser does not support the video tag.
-        autoplay="autoplay" loop="loop" playsinline="playsinline" webkit-playsinline="webkit-playsinline" x5-playsinline="x5-playsinline" x-webkit-airplay="allow" x5-video-orientation="portraint" x5-video-player-type="h5" x5-video-player-fullscreen="true" crossorigin="anonymous" preload="auto" data-object-fit="cover" data-object-position="center center" class="evnet-video_inner">
+        <autoplay="autoplay" loop="loop" playsinline="playsinline" webkit-playsinline="webkit-playsinline" x5-playsinline="x5-playsinline" x-webkit-airplay="allow" x5-video-orientation="portraint" x5-video-player-type="h5" x5-video-player-fullscreen="true" crossorigin="anonymous" preload="auto" data-object-fit="cover" data-object-position="center center" class="evnet-video_inner">
     </video>
     <h1>Persona 3</h1>
 </body>
