--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <video width="1920" height="1080" loop autoplay muted>
-      <source src="https://github.com/Fell0wer/Persona/raw/main/mylivewallpapers-com-Train-Ride-Persona-3-Reload-4K.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <dev class="video-container">
+        <video id='train' width="3840" height="2160" loop autoplay muted>
+            <source src="https://github.com/Fell0wer/Persona/raw/main/mylivewallpapers-com-Train-Ride-Persona-3-Reload-4K.mp4" type="video/mp4">
+        </video>
+    </dev>
     <h1>Persona 3</h1>
 </body>
 </html>
