--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </dev>
     </section>
     <section id="section2">
-        <dev>
+        <dev class="image1">
             <img src="https://github.com/Fell0wer/Persona/blob/main/loop-of-textless-version-of-p3r-pause-screen-v0-JYylNbZ9vpffB6Yn_0Pz13p2y61-tUTIx2VGMdtgoMg.png?raw=true">
         </dev>
     </section>
